# 3DViewer

src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  affine_transformation.cpp  affine_transformation.h  matrix.cpp  matrix.h
src/model/: cube_model.h
